# Hotel_OpenAI_Project

./: main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
data/docs/: algarve_sun_suites.md  lisbon_riverside_hotel.md  porto_family_resort.md  sintra_boutiquer_inn.md
src/: config.py  document_loader.py  ingest.py  rag.py
